# CAOS

./: CMakeLists.txt
tech02-I/: 0.S  1.S
tech02-II/: 0.S  1.S
tech02-III/: 0.c  1.S  1.c
tech03/: 0.c  1.c
tech04/: 0.c  1.c
tech05/: 0.c  1.c  2.c
tech06/: 0.c  1.c  2.c
tech07/: 0.c  1.c  2.c  CMakeLists.txt  exec_python.c
tech08/: 0.c  1.c  2.c  3.c
tech09/: 0.c  1.c  2.c  3.c
tech1/task0/: 0.sh  README.md
tech1/task1/: 1.sh  README.md
tech10/: 0.c  1.c
tech11/: 0.c  1.c
tech12/: 0.c  1.c
